tests/sources/invalid/classes/constructor_arg_type_mismatch_errors.fire
// Constructor call with an argument of the wrong type (arity matches, but
// the type at one position doesn't).
class Point {
    x: int32;
    y: int32;

    fn Point(x: int32, y: int32) {
        this.x = x;
        this.y = y;
    }
}

p: Point = Point(1, "two");  //~ ERROR FS-SEM-0010 @21
